maven notes updated